k8s/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: deepa-bms
  labels:
    app.kubernetes.io/part-of: deepa-bms
    app.kubernetes.io/component: web
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
